--- a/app/src/main/res/layout/activity_tweet_login.xml
+++ b/app/src/main/res/layout/activity_tweet_login.xml
@@ -10,13 +10,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.mrx.twitterapp.TweetLogin">
 
-    <!-- Login progress -->
-
-    <ScrollView
-        android:id="@+id/login_form"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
         <LinearLayout
             android:id="@+id/email_login_form"
             android:layout_width="match_parent"
@@ -28,17 +21,15 @@
             <ImageView
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:padding="20dp"
                 android:layout_gravity="center_horizontal"
+                android:padding="20dp"
                 android:src="@mipmap/ic_launcher" />
 
             <com.twitter.sdk.android.core.identity.TwitterLoginButton
                 android:id="@+id/twitter_login_button"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true" />
+                android:layout_height="wrap_content" />
 
 
         </LinearLayout>
-    </ScrollView>
 </LinearLayout>
