--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,6 +18,10 @@
             android:id="@+id/nav_manage"
             android:icon="@drawable/tw__composer_logo_blue"
             android:title="Tweets Screen" />
+        <item
+            android:id="@+id/nav_tab"
+            android:icon="@drawable/tw__composer_logo_blue"
+            android:title="Tabbed Activity" />
     </group>
 
     <item android:title="Communicate">
