--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">@color/tw__blue_default</color>
+    <color name="colorPrimaryDark">@color/tw__composer_black</color>
+    <color name="colorAccent">@color/tw__composer_blue_text</color>
 </resources>
